...
                          height: 20.0,
                        ),
                        Column(
                          children: [
                            InkWell(
                              child: ListTileView(
                                "Rename shelf",
                                Icon(
                                  Icons.edit_outlined,
                                  color: LABEL_COLOR,
                                ),
                              ),
                              onTap: () {
                                clickRename();
                              },
                            ),
                            InkWell(
                              child: ListTileView(
                                "Delete Shelf",
                                Icon(
                                  Icons.delete_outline,
                                  color: LABEL_COLOR,
                                ),
                              ),
                              onTap: () {
...
                    onTap: () {
                      deleteFromLibrary();
                    },
                  ),
                  InkWell(
                    child: ListTileView(
                      "Add to shelves...",
                      Icon(
                        Icons.add,
                        color: LABEL_COLOR,
                      ),
                    ),
                    onTap: () {
...
                              setState(() {
                                _radioSelected = value as int;
                              });
                              getRadioValue(value);
                              _close(context);
                            },
                            title: Text("List"),
                          ),
                          RadioListTile(
                            value: 2,
                            groupValue: _radioSelected,
                            onChanged: (value) {
                              setState(() {
                                _radioSelected = value as int;
                              });
                              getRadioValue(value);
                              _close(context);
                            },
                            title: Text("Large grid"),
                          ),
                          RadioListTile(
                            value: 3,
                            groupValue: _radioSelected,
                            onChanged: (value) {
                              setState(() {
                                _radioSelected = value as int;
                              });
                              getRadioValue(value);
                              _close(context);
                            },
                            title: Text("Small grid"),
                          )
                        ],
                      ),
                    ],
                  ),
                );
...
                  isGhostBtn: true,
                ),
                SizedBox(
                  width: 10.0,
                ),
                DeleteButtonView(
                  "Delete",
                  APP_THEME_COLOR,
                  Colors.white,
                  (context) {
                    deleteShelf(context1, shelf);
                  },
                ),
...
