...
                        alignment: Alignment.centerRight,
                        child: InkWell(
                          child: Padding(
                            padding:
                                const EdgeInsets.fromLTRB(0.0, 4.0, 20.0, 0.0),
                            child: Text(
                              "DONE",
                              style: TextStyle(
                                  color: APP_THEME_COLOR,
                                  fontWeight: FontWeight.w500,
                                  fontSize: 14),
                            ),
                          ),
...
                          },
                          icon: Icon(
                            Icons.edit_outlined,
                            color: Colors.white,
                            size: 18.0,
                          ),
                          label: Text("Create new"),
                        ),
                      ),
                    );
                  }),
        ),
      ),
...
